0.0.2 - Fixed a couple bugs:
 - Generated passwords didn't get put into the model properly.
 - Changed values in focused fields lost on timeout-initiated scene pop. 

0.0.1 - Initial release